--- a/Solution3/PresentationWebApp/Views/Shared/_Layout.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Support" asp-action="Contact">Contact Us</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Product List</a>
+                        </li>
                     </ul>
                 </div>
             </div>
