--- a/Solution3/PresentationWebApp/Views/Shared/CategoryFilterPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/CategoryFilterPartial.cshtml
@@ -1,6 +1,12 @@
-﻿<form class="form-inline" method="post" action="/Products/ProductCategories">
+﻿@*@model IEnumerable<ShoppingCart.Application.ViewModels.CategoryViewModel>*@
+
+<form class="form-inline" method="post" action="/Products/ProductCategories">
 
     <select class="form-select" aria-label="Default select example" name="category">
+        @*@foreach (var item in ViewBag.Categories)
+        {
+            <option value="@item.Id">@item.Name</option>
+        }*@
         <option selected>All</option>
         <option value="1">Pizza</option>
         <option value="2">Drinks</option>
