--- a/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
@@ -3,21 +3,35 @@
 
 @foreach (var p in Model)
 {
-    <div class="col-6">
-        <div class="card" style="width: 18rem;">
-            <img src="@p.ImageUrl" class="card-img-top image" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">@p.Name</h5>
-                <p class="card-text">@p.Price</p>
-                <a href="/Products/Details?id=@p.Id" class="btn btn-primary">View Specification</a>
+<div class="col-6">
+    <div class="card" style="width: 18rem;">
+        <img src="@p.ImageUrl" class="card-img-top image" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">@p.Name</h5>
+            <p class="card-text">@p.Price</p>
+            <a href="/Products/Details?id=@p.Id" class="btn btn-primary">View Specification</a>
 
-                @if (User.IsInRole("Admin"))
-                {
-                    <a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>
-                }
+            @if (User.IsInRole("Admin"))
+            {
+<a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>}
 
-            </div>
         </div>
     </div>
-}
+</div>}
+
+@*@{ var prevDisabled = !Model.previousPage ? "disabled" : "";
+    var nextDisabled = !Model.nextPage ? "disabled" : ""; }
+<a asp-action="Index"
+   asp-route-pageNum="@(Model.PageIndex - 1)"
+   class="btn btn-default @prevDisabled">
+    Previous Page
+</a>
+
+<a asp-action="Index"
+   asp-route-pageNum="@(Model.PageIndex + 1)"
+   class="btn btn-default @nextDisabled">
+    Next Page
+</a>*@
+
+
 
