--- a/Solution3/PresentationWebApp/Views/Products/Index.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Index.cshtml
@@ -6,46 +6,37 @@
 
 <div class="container">
     <div class="row">
+        <div class="col">
 
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
 
+                    @{ for (int i = 1; i <= ViewBag.totalPages; i++)
+                        {
+                            <li class="page-item"><a class="page-link" href="/Products?pageNumber=@i">@i</a></li>
+                       } }
+
+                </ul>
+            </nav>
+
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col">
             @Html.Partial("SearchPartial")
         </div>
         <div class="col">
-            @Html.Partial("CategoryFilterPartial",Model)
-
-
-
+            @Html.Partial("CategoryFilterPartial", Model)
         </div>
-
     </div>
 
-</div>
-
-<nav aria-label="Page navigation example">
-    <ul class="pagination">
-
-        @{ for (int i = 1; i <= ViewBag.totalPages; i++)
-            {
-                <li class="page-item"><a class="page-link" href="/Products?pageNumber=@i">@i</a></li> } 
-            }
-        
-    </ul>
-</nav>
-
-
-
-
-<div class="container">
     <div class="row">
-
         @Html.Partial("ViewProductsPartial", Model)
-
     </div>
-    <div class="row">
 
-    </div>
 </div>
+
 
 
 
