--- a/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
@@ -3,35 +3,24 @@
 
 @foreach (var p in Model)
 {
-<div class="col-6">
-    <div class="card" style="width: 18rem;">
-        <img src="@p.ImageUrl" class="card-img-top image" alt="...">
+<div class="col-4">
+    <div class="card">
+        <img src="@p.ImageUrl" class="card-img-top image" style="width: 100%">
         <div class="card-body">
-            <h5 class="card-title">@p.Name</h5>
-            <p class="card-text">@p.Price</p>
+            <h5 class="card-title text-center">@p.Name</h5>
+            <p class="card-text text-center">@p.Price</p>
             <a href="/Products/Details?id=@p.Id" class="btn btn-primary">View Specification</a>
 
             @if (User.IsInRole("Admin"))
             {
-<a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>}
+                <a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>
+            }
 
         </div>
     </div>
 </div>}
 
-@*@{ var prevDisabled = !Model.previousPage ? "disabled" : "";
-    var nextDisabled = !Model.nextPage ? "disabled" : ""; }
-<a asp-action="Index"
-   asp-route-pageNum="@(Model.PageIndex - 1)"
-   class="btn btn-default @prevDisabled">
-    Previous Page
-</a>
 
-<a asp-action="Index"
-   asp-route-pageNum="@(Model.PageIndex + 1)"
-   class="btn btn-default @nextDisabled">
-    Next Page
-</a>*@
 
 
 
