--- a/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/ViewProductsPartial.cshtml
@@ -11,10 +11,11 @@
             <p class="card-text text-center">@p.Price</p>
             <a href="/Products/Details?id=@p.Id" class="btn btn-primary">View Specification</a>
 
+            <a href="/ShoppingCart/AddItemToShoppingCart?id=@p.Id" class="btn btn-primary">Buy</a>
+
             @if (User.IsInRole("Admin"))
             {
-                <a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>
-            }
+        <a href="/Products/Delete?id=@p.Id" class="btn btn-danger">Delete</a>}
 
         </div>
     </div>
