--- a/Solution3/PresentationWebApp/Views/ShoppingCart/Index.cshtml
+++ b/Solution3/PresentationWebApp/Views/ShoppingCart/Index.cshtml
@@ -1,7 +1,50 @@
-﻿
+﻿@model IEnumerable<ShoppingCart.Application.ViewModels.ProductViewModel>
+
+
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="container>
+    <div class="row">
+        <p>Price: @totalCost </p>
+    </div>
+    <div class="row">
+        @if (ViewBag.cart != null)
+        {
+            @foreach (var item in ViewBag.cart)
+            {
+
+
+                <div class="col-6">
+                    <div class="card">
+                        <img src="@item.ImageUrl" class="card-img-top image" style="width: 100%">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">@item.Name</h5>
+                            <p class="card-text text-center">@item.Price</p>
+                            <p class="card-text text-center">@item.Description</p>
+
+                            <a href="ShoppingCart/RemoveItem?id=@item.Id" class="btn btn-danger">Remove</a>
+
+                        </div>
+                    </div>
+                </div>
+
+
+            }
+        }
+        else
+        {
+            <p>Shopping cart is empty!</p>
+        }
+    </div>
+
+
+</div>
+
+
+
+
+
+
 
