--- a/Solution3/PresentationWebApp/Views/Shared/_Layout.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Product List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCart" asp-action="Index">Product List</a>
+                            <a class="nav-link text-warning text-capitalize text-left" asp-area="" asp-controller="ShoppingCart" asp-action="Index">Shopping cart</a>
                         </li>
                     </ul>
                 </div>
