--- a/Solution3/PresentationWebApp/Views/ShoppingCart/Index.cshtml
+++ b/Solution3/PresentationWebApp/Views/ShoppingCart/Index.cshtml
@@ -3,39 +3,28 @@
 
 @{
     ViewData["Title"] = "Index";
+    List<ShoppingCart.Application.ViewModels.ProductViewModel> listForCount = new List<ShoppingCart.Application.ViewModels.ProductViewModel>();
+    
 }
 
 <div class="container>
+
     <div class="row">
-        <p>Price: @totalCost </p>
-    </div>
-    <div class="row">
-        @if (ViewBag.cart != null)
+        @if (Model != null && Model.Count() > 0)
         {
-            @foreach (var item in ViewBag.cart)
-            {
 
 
-                <div class="col-6">
-                    <div class="card">
-                        <img src="@item.ImageUrl" class="card-img-top image" style="width: 100%">
-                        <div class="card-body">
-                            <h5 class="card-title text-center">@item.Name</h5>
-                            <p class="card-text text-center">@item.Price</p>
-                            <p class="card-text text-center">@item.Description</p>
-
-                            <a href="ShoppingCart/RemoveItem?id=@item.Id" class="btn btn-danger">Remove</a>
-
-                        </div>
-                    </div>
-                </div>
 
 
-            }
+
+            @Html.Partial("ViewShoppingCartProductsPartial", Model)
+            @*@Html.Partial("CalculateShoppingCartPricePartial", Model)*@
+
+
         }
         else
         {
-            <p>Shopping cart is empty!</p>
+            <h1 class="p-3 mb-2 bg-warning text-dark text-center text-capitalize">Shopping cart is empty!</h1>
         }
     </div>
 
