--- a/Solution3/PresentationWebApp/Views/Products/Details.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Details.cshtml
@@ -43,6 +43,7 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a href="/Products/EditProduct?id=@Model.Id" class="btn btn-danger"></a>
+        @*@Html.ActionLink("Edit", "Edit", new { Model.Id }) |*@
+        <a asp-action="Index">Back to List</a>
 </div>
