--- a/Solution3/PresentationWebApp/Views/Shared/DeniedCheckOutPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/DeniedCheckOutPartial.cshtml
@@ -1,10 +1,7 @@
-﻿
-<div class="container">
+﻿<div class="container">
     <div class="row">
         <div class="alert alert-success">
-            Thanks for your purchasing!
-          
+            Not enough products in stock!
         </div>
     </div>
 </div>
-
