--- a/Solution3/PresentationWebApp/Views/Shared/DeniedCheckOutPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/DeniedCheckOutPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="alert alert-success">
             Not enough products in stock!
         </div>
