--- a/Solution3/PresentationWebApp/Views/ShoppingCart/Index.cshtml
+++ b/Solution3/PresentationWebApp/Views/ShoppingCart/Index.cshtml
@@ -14,11 +14,19 @@
         {
 
             @Html.Partial("ViewShoppingCartProductsPartial", Model)
- 
+
         }
         else
         {
-            <h1 class="p-3 mb-2 bg-warning text-dark text-center text-capitalize">Shopping cart is empty!</h1>
+            
+            <h1 class="p-3 mb-2 bg-warning text-dark text-center text-capitalize justify-content-center">Shopping cart is empty!</h1>
+            <a href="Products" class="text-decoration-none">
+                
+                <h1 class="alert alert-success" role="alert">
+                    <i class="fas fa-store fa-9x fa-align-center"></i>
+                    To Products Catalog
+                </h1>
+            </a>
         }
     </div>
 
