--- a/Solution3/PresentationWebApp/Views/Products/Details.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Details.cshtml
@@ -4,46 +4,75 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
-<div>
-    <h4>ProductViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
+@*<div class="p-3 mb-2 bg-dark text-white text-center">Product Details</div>
+<div class="container">
+    <div class="row">
+
+        <div class="col-3">
+            <div class="card" style="height: 100%; width: 100%">
+
+                <img src="@Html.DisplayFor(model => model.ImageUrl)" class="card-img-top image" style="width: 95%">
+                <hr />
+                <div class="card-body">
+                    <h5 class="card-title text-center">@Html.DisplayFor(model => model.Name)</h5>
+                    <p class="card-text text-center">@Html.DisplayFor(model => model.Price)</p>
+                    <hr />
+
+                    <a href="/ShoppingCart/AddItemToShoppingCart?id=@Html.DisplayFor(model => model.Id)" class="btn btn-dark justify-content-center" style="width: 100%">Add to cart</a>
+
+                </div>
+            </div>
+        </div>
+        <div class="col">
             @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-    </dl>
+        </div>
+
+    </div>
+    
+    <div class="row pt-3">
+        <div class="p-3 mb-2 bg-dark text-white text-center"><a asp-action="Index">Back to Catalog</a></div>
+        
+    </div>
 </div>
 <div>
-    <a href="/Products/EditProduct?id=@Model.Id" class="btn btn-danger"></a>
-        @*@Html.ActionLink("Edit", "Edit", new { Model.Id }) |*@
-        <a asp-action="Index">Back to List</a>
+    
+      
+        
+*@
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 bg-dark p-2 text-white mt-2 text-center text-capitalize">
+            Product Details
+        </div>
+    </div>
+    <div class="row mt-4">
+
+        <div class="col-lg-4 text-center border-right border-secondery">
+            <div class="tab-content row h-100 d-flex justify-content-center align-items-center" id="myTabContent">
+                <div class="tab-pane fade show active col-lg-12" id="home" role="tabpanel" aria-labelledby="home-tab">
+                    <img class="img-fluid" src="@Html.DisplayFor(model => model.ImageUrl)" />
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-7">
+            <h5>
+                @Html.DisplayFor(model => model.Name)
+            </h5>
+            <h3>
+                € @Html.DisplayFor(model => model.Price)
+            </h3>
+            <p>
+                @Html.DisplayFor(model => model.Description)
+            </p>
+            <ul>
+                <li> <a href="/ShoppingCart/AddItemToShoppingCart?id=@Html.DisplayFor(model => model.Id)" class="btn btn-success justify-content-center" style="width: 100%">Add to cart</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row pt-3">
+        <a asp-action="Index" class="text-decoration-none">
+            <i class="fas fa-arrow-left fa-5x text-decoration-none"></i></a>
+
+    </div>
 </div>
