--- a/Solution3/PresentationWebApp/Views/Shared/CheckOutPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/CheckOutPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="alert alert-success">
             Thanks for your purchasing!
           
