--- a/Solution3/PresentationWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/Solution3/PresentationWebApp/Views/Shared/_LoginPartial.cshtml
@@ -2,25 +2,31 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
-    </li>
-    <li class="nav-item">
-        <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
-    </li>
-}
+
+
+<a class="nav-link dropdown-toggle rounded-pill" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <i class="fas fa-sign-in-alt fa-2x" style="color: white"></i>
+</a>
+                <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+                    <a class="text-white dropdown-item bg-transparent" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+                    <form class="form-inline dropdown-item bg-transparent" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button type="submit" class="nav-link btn btn-link text-white dropdown-item bg-transparent">Logout</button>
+                    </form>
+
+                </div> 
+                }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+<a class="nav-link dropdown-toggle rounded-pill" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <i class="fas fa-sign-in-alt fa-2x" style="color: white"></i>
+</a>
+<div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+    
+        <a class="text-white dropdown-item bg-dark " asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="text-white dropdown-item bg-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+    
+</div>
 }
-</ul>
