--- a/Solution3/PresentationWebApp/Views/Products/Details.cshtml
+++ b/Solution3/PresentationWebApp/Views/Products/Details.cshtml
@@ -16,7 +16,7 @@
         <div class="col-lg-4 text-center border-right border-secondery">
             <div class="tab-content row h-100 d-flex justify-content-center align-items-center" id="myTabContent">
                 <div class="tab-pane fade show active col-lg-12" id="home" role="tabpanel" aria-labelledby="home-tab">
-                    <img class="img-fluid" src="@Html.DisplayFor(model => model.ImageUrl)" />
+                    <img class="img-fluid" src="@Html.DisplayFor(model => model.ImageUrl)">
                 </div>
             </div>
         </div>
